Resolves: tdf#103531 OOXML: write external file ID within quoted sheet names

Excel expects '[1]Sheet Name' instead of [1]'Sheet Name' and complains if it
encounters the latter.

Fortunately Calc handles both.

Change-Id: If1129e58725b522ca4755c05e313c03fca065f28
(cherry picked from commit 02af87fdd76bc94fb51aeb160c74d6f719c42c63)
Reviewed-on: https://gerrit.libreoffice.org/30324
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>